# elara-core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  conftest.py  elara-boot.sh  pyproject.toml  requirements.txt  wiki-home.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: links.yml  publish.yml  tests.yml
core/: __init__.py  continuity.py  elara.py  layer1_bridge.py  paths.py  tiers.py
daemon/: __init__.py  briefing.py  business.py  cache.py  cache.py.ots  context.py  corrections.py  dream.py  dream_core.py  dream_emotional.py  dream_emotional_analysis.py  dream_monthly.py  dream_threads.py  dream_weekly.py  emotions.py  events.py  gmail.py  goals.py  handoff.py  injector.py  llm.py  models.py  mood.py  outcomes.py  overwatch.py  predictions.py  presence.py  principles.py  priority.py  proactive.py  reactive.py  reactive.py.ots  reasoning.py  schemas.py  self_awareness.py  sessions.py  snapshot.py  state.py  state_core.py  synthesis.py  (+6 more)
daemon/awareness/: __init__.py  blind_spots.py  boot.py  intention.py  proactive.py  pulse.py  reflect.py
daemon/overnight/: __init__.py  __main__.py  config.py  drift.py  gather.py  output.py  prompts.py  research.py  scheduler.py  thinker.py
daemon/overwatch/: __init__.py  __main__.py  config.py  ingest.py  parser.py  search.py  snapshot.py
docs/: 404.html  CNAME  _headers  ambient.html  api.html  architecture-evolution-2026-02-05.md  architecture-review-2026-02-06.md  architecture.html  benchmarks.html  business-partner-spec.md  changelog.html  cheatsheet.html  claude-review-2-2026-02-07.md  claude-review-2026-02-07.md  cmd-palette.js  cognitive-layer-spec.md  compare.html  configure.html  contributing.html  demo.cast  examples.html  faq.html  feed.xml  future-upgrades.md  humans.txt  index.html  intro.html  kimi-review-2-2026-02-07.md  license.html  manifest.json  matrix.html  migrate.html  modules.html  overwatch-design.md  personas.html  playground.html  privacy.html  quickstart.html  quiz.html  roadmap.html  (+14 more)
docs/.well-known/: security.txt
elara_mcp/: __init__.py  _app.py  cli.py  server.py  wizard.py
elara_mcp/tools/: __init__.py  awareness.py  business.py  cognition_3d.py  cognitive.py  dreams.py  episodes.py  gmail.py  goals.py  llm.py  memory.py  (+6 more)
examples/: CLAUDE.md.example
hooks/: __init__.py  boot.py  intention-hook.py  on-activity.sh  on-stop.sh  overwatch-inject.sh
interface/: __init__.py  notify.py  storage.py  web.py
memory/: __init__.py  consolidation.py  conversations.py  episodic.py  temporal.py  temporal.py.ots  vector.py
network/: server.py
scripts/: brain-control.sh  elara-briefing.py  overnight-start.sh  overnight-status.sh  overnight-stop.sh  overwatch-start.sh  overwatch-status.sh  overwatch-stop.sh  review-whitepaper.py  session-prep.py  testnet.py
senses/: __init__.py  activity.py  ambient.py  system.py
tests/: conftest.py  test_async_tools.py  test_async_tools.py.ots  test_cache.py  test_cache.py.ots  test_decay.py  test_events.py  test_overwatch_parser.py  test_reactive.py  test_reactive.py.ots  test_schemas.py  test_temporal.py  test_temporal.py.ots  test_testnet.py  test_udr.py  test_wizard.py  test_workers.py  test_workers.py.ots
voice/: __init__.py  tts.py
watcher/: auto_worker.py  phone_watcher.py  watcher_ctl.py  worker.py  worker_ctl.py
windows/: start-elara.bat  start-elara.vbs
(+15 files in other folders)
