[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elara-core"
version = "0.17.0"
description = "Persistent presence, mood, memory, and self-awareness for AI assistants"
readme = "README.md"
license = "LicenseRef-BSL-1.1"
requires-python = ">=3.10"
authors = [
    { name = "Nenad Vasić" },
]
keywords = ["mcp", "claude", "ai", "memory", "persona"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "chromadb>=0.4.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
web = ["flask>=3.0.0"]
gmail = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]
network = ["aiohttp>=3.9.0", "zeroconf>=0.131.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "flask>=3.0.0"]

[project.scripts]
elara = "elara_mcp.cli:main"

[project.urls]
Homepage = "https://elara.navigatorbuilds.com"
Repository = "https://github.com/navigatorbuilds/elara-core"
Issues = "https://github.com/navigatorbuilds/elara-core/issues"
Documentation = "https://github.com/navigatorbuilds/elara-core#readme"

[tool.hatch.build]
exclude = [
    "voice/models/*.onnx",
    "interface/static/avatar.jpg",
]

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "daemon",
    "memory",
    "elara_mcp",
    "hooks",
    "interface",
    "network",
    "senses",
    "voice",
    "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
